# astroconsul

./: .dockerignore  .env.example  .env.local.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  SKILL.md  alembic.ini  aspect_engine.py  astro_utils.py  chart_builder.py  chart_test.py  location_service.py  migrate_profiles.py  natal_profiles.py  pyproject.toml  railway.json  requirements.txt  server.py  start.sh  synastry_engine.py  transit_aspect_engine.py  transit_builder.py  transit_timeline.py  transit_timing_engine.py
.ai/: CHANGELOG.ai.md  SKILL.md  apple-review-response-v1.1-2026-04-13.md  codex-instructions.md
alembic/: env.py
app/: __init__.py  main.py
charts/: chart_0994_03_26_223944.json  chart_1946_06_14_1454.json  chart_1961_11_19_1700.json  chart_1980_10_21_1746.json  chart_1980_11_21_0621.json  chart_1981_12_02_0730.json  chart_1986_04_17_1958.json  chart_1991_07_28_2206.json  chart_1994_03_25_2330.json  chart_1994_03_26_2130.json  chart_1994_03_26_2230.json  chart_1994_03_26_2330.json  chart_1996_08_13_0820.json  chart_2026_03_24_2206.json  chart_2026_07_24_2206.json
cloudflare-worker/: worker.js  wrangler.toml
data/: feels_like_time_modifiers.json  natal_aspects.json  natal_house_cusps_in_signs.json  natal_planets_in_houses.json  natal_planets_in_signs.json  natal_reference.json
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
scripts/: add_celebrity.py  convert_transit_aspects_i18n.py  fix_html_unicode.py  generate_post_images.py  import_legacy_json_to_db.py  publish_post.py  render_and_upload_images.py  rotate_apple_secret.py  seed_news.py  seed_news_ai_guide.py  update_news_posts.py
swiss-test/: chart_test.py
templates/: index.html
tests/: test_api_v1_routes.py  test_aspect_engine.py  test_db_import.py  test_frontend_template.py  test_health_endpoints.py  (+7 more)
(+169 files in other folders)
